# Text-To-SQL

./: .env.example  .gitignore  LICENSE  README.md  app.py  db.py  pyproject.toml  requirements.txt
src/: admin_view.py  ai_engine.py  auth.py  config.py  db_manager.py  user_view.py
