[tool.poetry]
package-mode = false

[project]
name = "queryguard-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "ahmed akram amer",email = "a7m7da7e3@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "huggingface-hub (>=1.20.1,<2.0.0)",
    "streamlit (>=1.58.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "google-genai (>=2.9.0,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
